# actix_blog

./: .env  .env.example  .gitignore  API.md  API_COMPLETE.md  Cargo.toml  README.md
migrations/: 001_init.sql
src/: config.rs  main.rs
src/db/: departments.rs  employees.rs  mod.rs  permissions.rs  projects.rs  roles.rs  users.rs
src/handlers/: auth.rs  departments.rs  employees.rs  mod.rs  permissions.rs  projects.rs  roles.rs  upload.rs  users.rs
src/middleware/: admin.rs  auth.rs  mod.rs
src/models/: department.rs  employee.rs  mod.rs  permission.rs  project.rs  role.rs  role_permission.rs  user.rs  user_role.rs
src/utils/: jwt.rs  mod.rs  permission.rs  redis_cache.rs  response.rs
