[package]
name = "company-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
validator = { version = "0.18", features = ["derive"] }
mime = "0.3"
sanitize-filename = "0.5"
redis = {version = "1.2.2",features = ["tokio-comp","connection-manager"]}

[profile.release]
opt-level = 3
lto = true
